--- a/MoneyM/Storyboards/OperationsPieChart.storyboard
+++ b/MoneyM/Storyboards/OperationsPieChart.storyboard
@@ -8,7 +8,6 @@
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
-        <capability name="UIMenu" message="Requires Xcode 11 or later." minToolsVersion="11.0" requiredIntegratedClassName="UICommandDiff"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -55,22 +54,8 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <button opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bU4-ut-PBH">
-                                <rect key="frame" x="344" y="104" width="54" height="34"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="34" id="7Z7-VP-Dxz"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                <menu key="menu" id="AI9-Hz-7FH">
-                                    <children>
-                                        <command title="Item 1" id="Kwy-pB-Duv"/>
-                                        <command title="Item 2" id="GsO-jL-F7Y"/>
-                                    </children>
-                                </menu>
-                                <state key="normal" title="Button"/>
-                            </button>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pHe-8c-gy8">
-                                <rect key="frame" x="0.0" y="146" width="414" height="716"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xdH-kF-KcL">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="800"/>
@@ -82,17 +67,70 @@
                                                     <constraint firstAttribute="width" secondItem="clW-UQ-qcX" secondAttribute="height" multiplier="382:301" id="CpY-XW-f6v"/>
                                                 </constraints>
                                             </view>
-                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="CwI-y4-B5k">
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="CwI-y4-B5k">
                                                 <rect key="frame" x="0.0" y="333" width="414" height="467"/>
                                                 <color key="backgroundColor" name="Main Background Color"/>
                                                 <prototypes>
-                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="blu-gu-qdX">
-                                                        <rect key="frame" x="20" y="49.5" width="374" height="43.5"/>
+                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="60" id="lJa-Gu-QP6" customClass="UIOperationTableViewCell" customModule="MoneyM" customModuleProvider="target">
+                                                        <rect key="frame" x="20" y="49.5" width="374" height="60"/>
                                                         <autoresizingMask key="autoresizingMask"/>
-                                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="blu-gu-qdX" id="rMH-ue-ntb">
-                                                            <rect key="frame" x="0.0" y="0.0" width="374" height="43.5"/>
+                                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lJa-Gu-QP6" id="f6Z-ae-z3z">
+                                                            <rect key="frame" x="0.0" y="0.0" width="374" height="60"/>
                                                             <autoresizingMask key="autoresizingMask"/>
+                                                            <subviews>
+                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v1p-fl-OUV">
+                                                                    <rect key="frame" x="16" y="10" width="40" height="40"/>
+                                                                    <subviews>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cpd-o7-T29">
+                                                                            <rect key="frame" x="16.5" y="2" width="7.5" height="36"/>
+                                                                            <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                                            <nil key="textColor"/>
+                                                                            <nil key="highlightedColor"/>
+                                                                        </label>
+                                                                    </subviews>
+                                                                    <color key="backgroundColor" name="Table View Cell Background"/>
+                                                                    <constraints>
+                                                                        <constraint firstItem="Cpd-o7-T29" firstAttribute="centerX" secondItem="v1p-fl-OUV" secondAttribute="centerX" id="JKC-9e-fHL"/>
+                                                                        <constraint firstAttribute="height" constant="40" id="YeU-bA-dm2"/>
+                                                                        <constraint firstAttribute="width" constant="40" id="dEJ-Vj-GfJ"/>
+                                                                        <constraint firstItem="Cpd-o7-T29" firstAttribute="centerY" secondItem="v1p-fl-OUV" secondAttribute="centerY" id="rvx-e7-tWk"/>
+                                                                    </constraints>
+                                                                    <userDefinedRuntimeAttributes>
+                                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadiusV">
+                                                                            <real key="value" value="20"/>
+                                                                        </userDefinedRuntimeAttribute>
+                                                                    </userDefinedRuntimeAttributes>
+                                                                </view>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b0a-Il-wuk">
+                                                                    <rect key="frame" x="72" y="19.5" width="74" height="21.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Balance" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YRI-cL-a8k">
+                                                                    <rect key="frame" x="275" y="15.5" width="83" height="29"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                            <color key="backgroundColor" name="UIView Background Color"/>
+                                                            <constraints>
+                                                                <constraint firstItem="b0a-Il-wuk" firstAttribute="leading" secondItem="v1p-fl-OUV" secondAttribute="trailing" constant="16" id="3Vu-Vr-VBz"/>
+                                                                <constraint firstItem="v1p-fl-OUV" firstAttribute="leading" secondItem="f6Z-ae-z3z" secondAttribute="leading" constant="16" id="R6O-B3-9LO"/>
+                                                                <constraint firstItem="v1p-fl-OUV" firstAttribute="centerY" secondItem="f6Z-ae-z3z" secondAttribute="centerY" id="Zd3-pL-N8o"/>
+                                                                <constraint firstAttribute="trailing" secondItem="YRI-cL-a8k" secondAttribute="trailing" constant="16" id="fEh-A5-kc4"/>
+                                                                <constraint firstItem="YRI-cL-a8k" firstAttribute="centerY" secondItem="f6Z-ae-z3z" secondAttribute="centerY" id="faM-4q-wAg"/>
+                                                                <constraint firstItem="b0a-Il-wuk" firstAttribute="centerY" secondItem="f6Z-ae-z3z" secondAttribute="centerY" id="wTF-EN-yyg"/>
+                                                            </constraints>
                                                         </tableViewCellContentView>
+                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <connections>
+                                                            <outlet property="amountLabel" destination="YRI-cL-a8k" id="o86-6h-bcP"/>
+                                                            <outlet property="categoryLabel" destination="b0a-Il-wuk" id="GzB-82-OkW"/>
+                                                            <outlet property="iconBackgrundView" destination="v1p-fl-OUV" id="HjR-61-X9B"/>
+                                                            <outlet property="iconLabel" destination="Cpd-o7-T29" id="AcF-6d-Fje"/>
+                                                        </connections>
                                                     </tableViewCell>
                                                 </prototypes>
                                             </tableView>
@@ -123,12 +161,10 @@
                         <color key="backgroundColor" name="Main Background Color"/>
                         <constraints>
                             <constraint firstItem="bh5-gU-Lcc" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="90E-ao-lym"/>
-                            <constraint firstItem="pHe-8c-gy8" firstAttribute="top" secondItem="bU4-ut-PBH" secondAttribute="bottom" constant="8" symbolic="YES" id="9XT-d3-v30"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="bU4-ut-PBH" secondAttribute="trailing" constant="16" id="AVu-U6-tt7"/>
-                            <constraint firstItem="bU4-ut-PBH" firstAttribute="top" secondItem="bh5-gU-Lcc" secondAttribute="bottom" constant="16" id="Ebj-Si-209"/>
                             <constraint firstItem="bh5-gU-Lcc" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="H1s-yL-p6w"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="pHe-8c-gy8" secondAttribute="bottom" id="U1b-RT-WMm"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="pHe-8c-gy8" secondAttribute="trailing" id="Xk6-A9-Nlz"/>
+                            <constraint firstItem="pHe-8c-gy8" firstAttribute="top" secondItem="bh5-gU-Lcc" secondAttribute="bottom" id="gPH-HI-w6i"/>
                             <constraint firstItem="bh5-gU-Lcc" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="nHv-LY-Xmh"/>
                             <constraint firstItem="pHe-8c-gy8" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="uMZ-NN-PlU"/>
                         </constraints>
@@ -147,6 +183,12 @@
         <image name="xmark" catalog="system" width="128" height="113"/>
         <namedColor name="Main Background Color">
             <color red="0.94900000095367432" green="0.94900000095367432" blue="0.96899998188018799" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Table View Cell Background">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="UIView Background Color">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="secondaryLabelColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
